# cards-app

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
Classes/: AppDelegate.cpp
Classes/coursesListModule/: coursesListScene.cpp  coursesListScene.h
Classes/databasesModule/: coursesDatabase.cpp  coursesDatabase.h  coursesTool.cpp  coursesTool.h  ipaDatabase.cpp  ipaDatabase.h
Classes/interfaceModule/: customNodeTypes.cpp  customNodeTypes.h  interfaceSystem.h
Classes/interfaceModule/widgets/: cardBtnWidget.cpp  cardBtnWidget.h  cardProgressBar.cpp  cardProgressBar.h  cardWidget.cpp  cardWidget.h  examCardWidget.cpp  examCardWidget.h  resultCardWidget.cpp  resultCardWidget.h  testWidget.cpp  testWidget.h
Classes/interfaceModule/windows/: coursePreviewWindow.cpp  coursePreviewWindow.h  examWindow.cpp  examWindow.h  windowSystem.cpp  windowSystem.h
Classes/localProfile/: localProfileBlock.cpp  localProfileBlock.h
Classes/utilityModule/: stringFormat.h
Resources/config/: setting.json  user_profile.json
Resources/properties/nodeProperties/: example.json  windowViewer.json
Resources/properties/nodes/: windowViewer.json
cmake/: CompilerWarnings.cmake  FindICU.cmake
lib/: empty.h  project_dependency.cmake
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Icon.icns  Info.plist
src/: AppDelegate.cpp  AppDelegate.h
src/coursesListModule/: coursesListScene.cpp  coursesListScene.h
src/databasesModule/: coursesDatabase.cpp  coursesDatabase.h  coursesTool.cpp  coursesTool.h  databaseManager.cpp  databaseManager.h  ipaDatabase.cpp  ipaDatabase.h
src/interfaceModule/: customNodeTypes.cpp  customNodeTypes.h
src/interfaceModule/widgets/: buttonIconWidget.cpp  buttonIconWidget.h  cardBtnWidget.cpp  cardBtnWidget.h  cardProgressBar.cpp  cardProgressBar.h  cardWidget.cpp  cardWidget.h  closeBtnWidget.cpp  closeBtnWidget.h  examCardWidget.cpp  examCardWidget.h  resultCardWidget.cpp  resultCardWidget.h  testWidget.cpp  testWidget.h
src/interfaceModule/windows/: coursePreviewWindow.cpp  coursePreviewWindow.h  examWindow.cpp  examWindow.h  (+2 more)
src/localProfile/: localProfileBlock.cpp  localProfileBlock.h
tests/: CMakeLists.txt  TestDatabases.cpp
utilities/: buildnum.ver  parseGoogleSheet.py  parseSettings.json  parseXml.py
(+53 files in other folders)
